--- a/es/advanced_autodiff.ipynb
+++ b/es/advanced_autodiff.ipynb
@@ -44,6 +44,16 @@
     "# Advanced Automatic Differentiation"
    ]
   },
+   {
+   "cell_type": "markdown",
+   "metadata": {
+    "colab_type": "text",
+    "id": "3TI3Q3XBesaS"
+   },
+   "source": [
+    "# 27/12/2021"
+   ]
+  },
   {
    "cell_type": "markdown",
    "metadata": {
