--- a/07_1_09.md
+++ b/07_1_09.md
@@ -40,6 +40,8 @@ girls:
 
 # Devis
 
+[![gitlocalized ](https://gitlocalize.com/repo/6943/whole_project/badge.svg)](https://gitlocalize.com/repo/6943/whole_project?utm_source=badge)
+
 > La vie est comme une boîte de chocolats, tu ne sais jamais ce que tu vas avoir
 >
 > > Ce ne sont pas nos capacités qui montrent ce que nous sommes vraiment. C'est nos choix.
